--- a/activities.html
+++ b/activities.html
@@ -3,113 +3,156 @@
   <head>
     <title>Great Cliffs of California</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
-  <header>
-    <img
-      src="images/cliff_ocean.jpg"
-      alt="Ocean View Cliff"
-      width="1280"
-      height="564"
-    />
-    <div class="main-header">
-      <div class="logo">
-        <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+  <body id="activities">
+    <header>
+      <div class="main-header">
+        <div class="logo">
+          <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+        </div>
+        <nav class="main-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>Cliffs</li>
+            <li class="active"><a href="activities.html">Activities</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>Cliffs</li>
-        <li class="active"><a href="activities.html">Activities</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    </header>
 
-  <!-- Main Content -->
-  <main>
-    <h1>Activities</h1>
-    <p>
-      There are many planned activities at all the cliff sites. Some are
-      scheduled daily, weekly, monthly and yearly. These activities are not
-      however run by the state park and recreational department. They are
-      operated and manage by private vendors but are partners with the state
-      department. Therefore, for schedule inquiries or information, please
-      contact them directly. For a list of activities, please refer to the table
-      below:
-    </p>
-
-    <table border="1">
-      <caption>
-        Activities at the Cliffs
-      </caption>
-      <thead>
-        <tr>
-          <th>Activity</th>
-          <th>West Cliff</th>
-          <th>North Cliff</th>
-          <th>East Cliff</th>
-          <th>South Cliff</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Hiking</td>
-          <td>College Hikes</td>
-          <td>Family Fun</td>
-          <td>Treasure Trails</td>
-          <td>Canyon Explorer</td>
-        </tr>
-        <tr>
-          <td>Kayak</td>
-          <td>Western Kayak Meetup</td>
-          <td>Not Available</td>
-          <td>Youth Kayaking</td>
-          <td>Kayak Down</td>
-        </tr>
-        <tr>
-          <td>Skydiving</td>
-          <td>Seacliff Diving</td>
-          <td>Sky is the limit</td>
-          <td>Not Available</td>
-          <td>Sky Diving for Beginners</td>
-        </tr>
-        <tr>
-          <td>Biking</td>
-          <td>Bicycle for One</td>
-          <td>Not Available</td>
-          <td>Bike Meetup Group</td>
-          <td>Not Available</td>
-        </tr>
-        <tr>
-          <td>Camping</td>
-          <td>Youth Camp</td>
-          <td>Rent a Tent</td>
-          <td>Campground Adventure</td>
-          <td>Sunset Camping</td>
-        </tr>
-      </tbody>
-      <tfoot></tfoot>
-    </table>
-  </main>
-  <!-- End Main Content -->
-
-  <footer>
-    <div id="nondisclaimer">
-      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-      <div class="social">
-        <h3>Facebook Image</h3>
-        <h3>Instagram Image</h3>
-        <h3>Twitter Image</h3>
-      </div>
-    </div>
-    <div id="disclaimer">
+    <!-- Main Content -->
+    <main>
+      <h1>Activities</h1>
       <p>
-        This website is designed and created solely for educational purposes
-        only at Westcliff University. All contents are not intended for any
-        commercial gain or use.
+        There are many planned activities at all the cliff sites. Some are
+        scheduled daily, weekly, monthly and yearly. These activities are not
+        however run by the state park and recreational department. They are
+        operated and manage by private vendors but are partners with the state
+        department. Therefore, for schedule inquiries or information, please
+        contact them directly. For a list of activities, please refer to the
+        table below:
       </p>
-    </div>
-  </footer>
+
+      <table>
+        <caption>
+          Activities at the Cliffs
+        </caption>
+        <thead>
+          <tr>
+            <th>Activity</th>
+            <th>West Cliff</th>
+            <th>North Cliff</th>
+            <th>East Cliff</th>
+            <th>South Cliff</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Hiking</td>
+            <td>College Hikes</td>
+            <td>Family Fun</td>
+            <td>Treasure Trails</td>
+            <td>Canyon Explorer</td>
+          </tr>
+          <tr>
+            <td>Kayak</td>
+            <td>Western Kayak Meetup</td>
+            <td>Not Available</td>
+            <td>Youth Kayaking</td>
+            <td>Kayak Down</td>
+          </tr>
+          <tr>
+            <td>Skydiving</td>
+            <td>Seacliff Diving</td>
+            <td>Sky is the limit</td>
+            <td>Not Available</td>
+            <td>Sky Diving for Beginners</td>
+          </tr>
+          <tr>
+            <td>Biking</td>
+            <td>Bicycle for One</td>
+            <td>Not Available</td>
+            <td>Bike Meetup Group</td>
+            <td>Not Available</td>
+          </tr>
+          <tr>
+            <td>Camping</td>
+            <td>Youth Camp</td>
+            <td>Rent a Tent</td>
+            <td>Campground Adventure</td>
+            <td>Sunset Camping</td>
+          </tr>
+        </tbody>
+        <tfoot></tfoot>
+      </table>
+    </main>
+    <!-- End Main Content -->
+
+    <section>
+      <ul id="partners">
+        <li class="partner">
+          <img
+            src="images/partners/partner-bustour.png"
+            alt="Partner Bus Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-cabinrental.png"
+            alt="Partner Cabin Rental"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-campingadv.png"
+            alt="Partner Camping Adventure"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-collegetours.png"
+            alt="Partner College Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-rentalbike.png"
+            alt="Partner Bike Rentals"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-tourgroup.png"
+            alt="Partner Tour Group"
+          />
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <div id="nondisclaimer">
+        <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+        <div class="social">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-twitter"></a>
+        </div>
+      </div>
+      <div id="disclaimer">
+        <p>
+          This website is designed and created solely for educational purposes
+          only at Westcliff University. All contents are not intended for any
+          commercial gain or use.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
