--- a/contact.html
+++ b/contact.html
@@ -3,86 +3,151 @@
   <head>
     <title>Great Cliffs of California</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
-  <header>
-    <img
-      src="images/cliff_ocean.jpg"
-      alt="Ocean View Cliff"
-      width="1280"
-      height="564"
-    />
-    <div class="main-header">
-      <div class="logo">
-        <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+  <body id="contact">
+    <header>
+      <div class="main-header">
+        <div class="logo">
+          <img src="images/logo.png" alt="Great Cliffs Logo" width="125" />
+        </div>
+        <nav class="main-menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>Cliffs</li>
+            <li><a href="activities.html">Activities</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
-    <nav class="main-menu">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li>Cliffs</li>
-        <li><a href="activities.html">Activities</a></li>
-        <li class="active"><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    </header>
 
-  <!-- Main Content -->
-  <main>
-    <h1>Contacting Us</h1>
-    <p>
-      If you need more information about the Cliffs, Hours of Operations,
-      Facilities or questions about this site, please contact us bu using one of
-      the following:
-    </p>
-    <h2>Phone</h2>
-    <p>(800)GCLIFFS</p>
-    <h2>Email</h2>
-    <p>info@greatcliffs.com</p>
-    <form action="/contact" method="post">
-      <fieldset>
-        <legend>Contact Form</legend>
-        <label>Enter your full name</label><br />
-        <input type="text" name="name" /><br />
-        <label>Enter your email</label><br />
-        <input type="email" name="email" /><br />
-        <label>Enter your phone</label><br />
-        <input type="text" name="phone" /><br />
-        <br /><label>How should we contact you?</label><br />
-        <input type="radio" name="gender" value="male" />Email
-        <input type="radio" name="gender" value="female" />Phone<br />
-        <br />
-        <label>Which Cliff are you inquiring?</label><br />
-        <select>
-          <option>West Cliff</option>
-          <option>North Cliff</option>
-          <option>East Cliff</option>
-          <option>South Cliff</option>
-        </select>
-        <br />
-        <br />How did you hear about us:<br />
-        <textarea></textarea><br />
-        <input type="submit" value="Inquire" />
-      </fieldset>
-    </form>
-  </main>
-  <!-- End Main Content -->
-
-  <footer>
-    <div id="nondisclaimer">
-      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-      <div class="social">
-        <h3>Facebook Image</h3>
-        <h3>Instagram Image</h3>
-        <h3>Twitter Image</h3>
-      </div>
-    </div>
-    <div id="disclaimer">
+    <!-- Main Content -->
+    <main>
+      <h1>Contacting Us</h1>
       <p>
-        This website is designed and created solely for educational purposes
-        only at Westcliff University. All contents are not intended for any
-        commercial gain or use.
+        You can drop by the visitors information center at the cliff site that
+        you plan on visiting. They are open 7 days a week from 8.00AM to 5.00PM.
+        You can also contact us directly if you need additional information
+        about the Cliffs, Hours of Operations, Facilities or questions about
+        this site using one of the following:
       </p>
-    </div>
-  </footer>
+
+      <div class="contactinfo">
+        <div class="phone">
+          <span>Phone:</span>
+          <span>(800)GCLIFFS</span>
+        </div>
+        <div class="email">
+          <span>Email:</span>
+          <span>info@greatcliffs.com</span>
+        </div>
+      </div>
+
+      <form action="/contact" method="post">
+        <fieldset>
+          <legend>Contact Form</legend>
+          <div class="textbox">
+            <label>Name:</label>
+            <input type="text" name="name" placeholder="John Doe" />
+            <label>Email:</label>
+            <input type="email" name="email" placeholder="johndoe@gmail.com" />
+            <label>Phone:</label>
+            <input type="text" name="phone" placeholder="xxx-xxx-xxxx" />
+          </div>
+
+          <div class="radios">
+            <label>How should we contact you?</label>
+            <input type="radio" name="contact" value="email" checked />Email
+            <input type="radio" name="contact" value="phone" />Phone
+          </div>
+
+          <div class="selectmenu">
+            <label>Which Cliff are you inquiring?</label>
+            <select>
+              <option>West Cliff</option>
+              <option>North Cliff</option>
+              <option>East Cliff</option>
+              <option>South Cliff</option>
+            </select>
+          </div>
+
+          <div class="commentbox">
+            <label>How did you hear about us:</label>
+            <textarea></textarea>
+          </div>
+
+          <div class="button">
+            <input type="submit" value="Inquire" />
+          </div>
+        </fieldset>
+      </form>
+    </main>
+    <!-- End Main Content -->
+
+    <section>
+      <ul id="partners">
+        <li class="partner">
+          <img
+            src="images/partners/partner-bustour.png"
+            alt="Partner Bus Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-cabinrental.png"
+            alt="Partner Cabin Rental"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-campingadv.png"
+            alt="Partner Camping Adventure"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-collegetours.png"
+            alt="Partner College Tours"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-rentalbike.png"
+            alt="Partner Bike Rentals"
+          />
+        </li>
+        <li class="partner">
+          <img
+            src="images/partners/partner-tourgroup.png"
+            alt="Partner Tour Group"
+          />
+        </li>
+      </ul>
+    </section>
+
+    <footer>
+      <div id="nondisclaimer">
+        <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+        <div class="social">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-twitter"></a>
+        </div>
+      </div>
+      <div id="disclaimer">
+        <p>
+          This website is designed and created solely for educational purposes
+          only at Westcliff University. All contents are not intended for any
+          commercial gain or use.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
