--- a/index.html
+++ b/index.html
@@ -3,134 +3,12 @@
   <head>
     <title>Great Cliffs of California</title>
     <meta charset="utf-8" />
-    <style>
-      /* Header */
-      header {
-        width: 100%;
-        min-height: 400px;
-        padding-top: 3em;
-      }
-
-      #home header {
-        background: no-repeat lightgrey url(images/cliff_ocean.jpg);
-        background-size: 1500px;
-      }
-
-      .main-header {
-        background-color: rgba(255, 255, 255, 0.8);
-        width: 700px;
-        margin: 2em auto 0 auto;
-        min-height: 100px;
-        height: 100px;
-      }
-
-      .main-header .logo img {
-        width: 100px;
-        height: 100px;
-        margin: 0 2em 0 0;
-        float: left;
-      }
-      /* Nav */
-      .main-menu {
-        margin-left: 226px;
-        font-weight: 400;
-      }
-
-      .main-menu ul li {
-        list-style-type: none;
-        display: inline-block;
-        float: left;
-        padding-left: 25px;
-        padding-right: 25px;
-        border-left: 1px solid rgba(202, 204, 202, 0.6);
-        line-height: 100px;
-        text-transform: uppercase;
-        font-size: 14px;
-      }
-
-      .main-menu ul li a {
-        text-decoration: none;
-        color: #888;
-      }
-
-      .main-menu ul li a:hover {
-        color: #9ed034;
-      }
-
-      .main-menu ul li.active {
-        background: #9ed034;
-        border: none;
-      }
-
-      .main-menu ul li.active a {
-        color: #fff;
-      }
-
-      /* Main Content */
-      main h2 {
-        color: #9ed034;
-      }
-
-      main {
-        margin: 80px 100px;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      /* Partners */
-      section {
-        width: 100%;
-        background-color: #4288c3;
-      }
-
-      section #partners {
-        width: 1200px;
-        padding: 2em 0 2em 0;
-        margin: 0 auto;
-        text-align: center;
-      }
-
-      section #partners .partner {
-        display: inline-block;
-        margin: 0 0.75em;
-        padding: 1.3em 1.5em;
-        background-color: #fff;
-        border-radius: 50%;
-      }
-
-      section #partners .partner img {
-        width: 90px;
-        height: 90px;
-      }
-
-      /* Footer */
-      footer {
-        width: 100%;
-        height: 155px;
-        padding-bottom: 1em;
-        background-color: #ecfab8;
-      }
-
-      footer #nondisclaimer .copy {
-        padding: 3.5em 3.5em 3.5em 13em;
-        float: left;
-        font-size: 0.9em;
-      }
-
-      footer #nondisclaimer .social {
-        padding: 2.5em;
-        margin-right: 9.25em;
-        float: right;
-      }
-
-      footer #disclaimer {
-        clear: both;
-      }
-
-      footer #disclaimer p {
-        font-size: 0.85em;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body id="home">
@@ -212,23 +90,23 @@
         </li>
       </ul>
     </section>
-  </body>
 
-  <footer>
-    <div id="nondisclaimer">
-      <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
-      <div class="social">
-        <h3>Facebook Image</h3>
-        <h3>Instagram Image</h3>
-        <h3>Twitter Image</h3>
+    <footer>
+      <div id="nondisclaimer">
+        <div class="copy">&copy; Copyright 2020 :: GreatCliffs.com</div>
+        <div class="social">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-instagram"></a>
+          <a href="#" class="fa fa-twitter"></a>
+        </div>
       </div>
-    </div>
-    <div id="disclaimer">
-      <p>
-        This website is designed and created solely for educational purposes
-        only at Westcliff University. All contents are not intended for any
-        commercial gain or use.
-      </p>
-    </div>
-  </footer>
+      <div id="disclaimer">
+        <p>
+          This website is designed and created solely for educational purposes
+          only at Westcliff University. All contents are not intended for any
+          commercial gain or use.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
