--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     />
   </head>
 
-  <body id="contact">
+  <body id="contact" onLoad="disableButton(true)">
     <header>
       <div class="main-header">
         <div class="logo">
@@ -92,12 +92,13 @@
               type="text"
               name="randomcode"
               placeholder="Enter characters"
+              id="codeentered"
             />
             <p id="codes"></p>
           </div>
 
           <div class="button">
-            <input type="submit" value="Inquire" />
+            <input type="submit" value="Inquire" id="submit" />
           </div>
         </fieldset>
       </form>
@@ -131,5 +132,58 @@
     <script src="js/site_scripts.js"></script>
     <!-- Random Codes -->
     <script src="js/randomcodes.js"></script>
+
+    <script>
+      var code = " "; // initialize to null value
+      var str =
+        "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@#$";
+
+      for (i = 1; i <= 8; i++) {
+        var char = Math.random() * str.length; // random select a character from the variable
+        code += str.charAt(char); // accumulate the generated character into a string of 8
+      }
+
+      // Get HTML element to display
+      document.getElementById("codes").innerHTML = code;
+
+      var getCode = ""; // variable to store user input code
+
+      // Determine when to enable or disable button
+      function disableButton(btnvalue) {
+        document.getElementById("submit").disabled = btnvalue;
+        if (btnvalue == true) {
+          // test if button is disabled or enabled
+          // set button and label color translucent
+          document.getElementById("submit").style.backgroundColor =
+            "rgba(73, 119, 209, 0.3)";
+          document.getElementById("submit").style.color =
+            "rgba(255, 255, 255, 0.5)";
+        } else {
+          // set button and label color with no transparency
+          document.getElementById("submit").style.backgroundColor =
+            "rgba(73, 119, 209, 1)";
+          document.getElementById("submit").style.color =
+            "rgba(255, 255, 255, 1)";
+        }
+      }
+
+      // Listen to user input code
+      var codebox = document.getElementById("codeentered"); // get textbox
+      codebox.addEventListener("input", evaluateCode); // listen to code entered in textbox
+
+      // Run function if detected user had entered a character in textbox
+      function evaluateCode() {
+        getCode = document.getElementById("codeentered").value; // get character entered
+
+        var charset1 = getCode.trim(); // remove any hidden characters entered
+        var charset2 = code.trim(); // remove any hidden characters generated
+        // Test if code entered matches the number of generated characters
+        if (charset1.length == charset2.length && charset1 == charset2) {
+          disableButton(false); // if match, run the function to enable button
+        } else {
+          disableButton(true); // if not match, run the function to disable button
+        }
+      }
+    </script>
   </body>
 </html>
