--- a/activities.html
+++ b/activities.html
@@ -121,9 +121,11 @@
         </p>
       </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Digital Clock -->
     <script src="js/digclock.js"></script>
     <!-- Partners -->
     <script src="js/site_scripts.js"></script>
+    <script src="js/activity.js"></script>
   </body>
 </html>
