--- a/activities.html
+++ b/activities.html
@@ -97,6 +97,16 @@
         </tbody>
         <tfoot></tfoot>
       </table>
+
+      <div id="displaySelected">
+        <div id="result">
+          <h4>My selected activities to enquire:</h4>
+        </div>
+        <div id="sendinfo">
+          <input type="email" placeholder="johndoe@gmail.com" />
+          <button>Get Info</button>
+        </div>
+      </div>
     </main>
     <!-- End Main Content -->
 
