week 5 day 3 lab

--- a/cliffs.html
+++ b/cliffs.html
@@ -9,6 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
 
   <body id="cliffs">
@@ -51,21 +53,21 @@
       </p>
       <div class="cliffs-container">
         <div class="cliff-row">
-          <div class="cliff-card">
+          <div class="cliff-card lightbox-toggle">
             <h3 class="cliff-title">West Cliff</h3>
             <img src="images/cliff-west-sea.jpg" alt="West Cliff" />
           </div>
-          <div class="cliff-card">
+          <div class="cliff-card lightbox-toggle">
             <h3 class="cliff-title">North Cliff</h3>
             <img src="images/cliff-north-mountain.jpg" alt="North Cliff" />
           </div>
         </div>
         <div class="cliff-row">
-          <div class="cliff-card">
+          <div class="cliff-card lightbox-toggle">
             <h3 class="cliff-title">East Cliff</h3>
             <img src="images/cliff-east-river.jpg" alt="East Cliff" />
           </div>
-          <div class="cliff-card">
+          <div class="cliff-card lightbox-toggle">
             <h3 class="cliff-title">South Cliff</h3>
             <img src="images/cliff-south-canyon.jpg" alt="South Cliff" />
           </div>
@@ -95,9 +97,17 @@
         </p>
       </div>
     </footer>
+
+    <div class="backdrop"></div>
+
+    <div class="box">
+      <div class="close">x</div>
+    </div>
     <!-- Digital Clock -->
     <script src="js/digclock.js"></script>
     <!-- Partners -->
     <script src="js/site_scripts.js"></script>
+    <!-- Lightbox -->
+    <script src="js/lightbox.js"></script>
   </body>
 </html>
